Nueva funcionalidad en la tercera pestaña
Tercera pestaña se agrego, menu para ver todos los calculo resueltos que realizo o que falta.

--- a/acciones/seleccion-tipo/Roscado/Roscado-Laminacion.html
+++ b/acciones/seleccion-tipo/Roscado/Roscado-Laminacion.html
@@ -345,10 +345,10 @@
                         <div class="menu-calculadora">
                             <fieldset>
                                 <legend>Calcular n (RPM)</legend>
-                                <label for="">Ingrese el D<sub>N</sub>:</label>
-                                <input type="number" id="num" placeholder="Diametro Nominal (mm)"></input>
+                                <label for="">Ingrese el valor de D<sub>N</sub>:</label>
+                                <input type="number" id="num" placeholder="Diametro nominal de rosca (mm)"></input>
                                 <br><br>
-                                <label for="">Ingrese la V<sub>c</sub>:</label>
+                                <label for="">Ingrese el valor de V<sub>c</sub>:</label>
                                 <input type="number" id="num1" placeholder="Velocidad de Corte (m/min)"></input>
                                 <br>
                                 <input type="button" onclick="CalcularRoscadoMachLamRPM()" value="Calucular">
@@ -405,10 +405,10 @@
                         <div class="menu-calculadora">
                             <fieldset>
                                 <legend>Calcular V<sub>c</sub></legend>
-                                <label for="">Ingrese el D<sub>n</sub>:</label>
-                                <input type="number" id="DN" placeholder="Diametro nominal (mm)">
+                                <label for="">Ingrese el valor de D<sub>n</sub>:</label>
+                                <input type="number" id="DN" placeholder="Diametro nominal de rosca (mm)">
                                 <br><br>
-                                <label for="">Ingrese n (RPM):</label>
+                                <label for="">Ingrese el valor de n (RPM):</label>
                                 <input type="number" id="n1" placeholder="RPM">
                                 <br>
                                 <input type="button" onclick="CalucularRoscadoMachLamVC();" value="Calucular">
@@ -464,19 +464,19 @@
                             <fieldset>
                             	<legend>Calcular K<sub>c</sub></legend>
                                 <div id="scroll-fieldset">
-                                <label for="">Ingrese K<sub>c1.1</sub>:</label>
+                                <label for="">Ingrese el valor de K<sub>c1.1</sub>:</label>
                                 <input type="text" id="kc1" placeholder="Fuerza de corte especifica (Tabla) (N/mm2)">
                                 <br>
-                                <label for="">Ingrese P:</label>
-                                <input type="text" id="p" placeholder="Paso de rosca">
+                                <label for="">Ingrese el valor de P:</label>
+                                <input type="text" id="p" placeholder="Paso de rosca (mm)">
                                 <br>
-                                <label for="">Ingrese Z:</label>
+                                <label for="">Ingrese el valor de Z:</label>
                                 <input type="text" id="z" placeholder="Numero de ranuras">
                                 <br>
-                                <label for="">Ingrese L<sub>f</sub>:</label>
+                                <label for="">Ingrese el valor de L<sub>f</sub>:</label>
                                 <input type="text" id="lf" placeholder="Longitud del cono de entrada (mm)">
                                 <br>
-                                <label for="">Ingrese mc:</label>
+                                <label for="">Ingrese el valor de mc:</label>
                                 <input type="text" id="mc" placeholder="Valor de conicidad (Tabla)">
                                 <br>
                                 <input type="button" onclick="CalucularRoscadoMachLamKC()" value="Calucular">
@@ -533,14 +533,14 @@
                             <fieldset>
                             	<legend>Calcular M<sub>d</sub></legend>
                                 <div id="scroll-fieldset">
-                                <label for="">Ingrese K<sub>c</sub>:</label>
+                                <label for="">Ingrese el valor de K<sub>c</sub>:</label>
                                 <input type="number" id="kc9" placeholder="Fuerza de corte especifica (N/mm2)">
                                 <br>
-                                <label for="">Ingrese D<sub>N</sub>:</label>
+                                <label for="">Ingrese el valor de D<sub>N</sub>:</label>
                                 <input type="number" id="Dn9" placeholder="Diametro nominal de rosca (mm)">
                                 <br>
-                                <label for="">Ingrese P:</label>
-                                <input type="number" id="p9" placeholder="Paso nominaL de rosca">
+                                <label for="">Ingrese el valor de P:</label>
+                                <input type="number" id="p9" placeholder="Paso nominaL de rosca (mm)">
                                 <br>
                                 <label for="">Ingrese L<sub>c</sub>:</label>
                                 <input type="number" id="lc9" placeholder="Profundidad de rosca (mm)">
