--- a/acciones/seleccion/Torneado.html
+++ b/acciones/seleccion/Torneado.html
@@ -28,17 +28,20 @@
                     <div class="scroll-menu-desplegable">
                         
                                           
-                        <a href="../seleccion/Torneado.html"  class="w3-buttn">
+                        <a href="Torneado.html" class="w3-buttn">
                             Torneado
                         </a>
-                        <a href="../seleccion/fresado.html" class="w3-buttn">
+                        <a href="Fresado.html" class="w3-buttn">
                             Fresado
                         </a>
-                        <a href="../seleccion/taladrado.html" class="w3-buttn">
+                        <a href="Taladrado.html" class="w3-buttn">
                             Taladrado
                         </a>
-                        <a href="../seleccion/roscado.html" class="w3-buttn">
+                        <a href="Roscado.html" class="w3-buttn">
                             Roscado
+                        </a>
+						<a href="../menu.html" class="w3-buttn">
+                            Menu
                         </a>
                         <a class="w3-buttn">
                             Ajuste
