creo la carpeta y el archivo register-0

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <input type="submit" name="ingresar" id="ingresar" value="Ingresar">
             <br>
             <br>
-            <a href="register.html">
+            <a href="register/register-0.html">
             <div>            
             <label id="labelAccount">¿No tienes cuenta?</label>
             </div>
