Usuario creado y guardado en localStorage

--- a/register-0.html
+++ b/register-0.html
@@ -104,7 +104,7 @@
         <br>
         <a href="register-1.html">
             <div>         
-            <input type="submit" name="siguiente" id="siguiente" value="siguiente">       
+            <input type="submit" name="siguiente" id="siguiente" value="siguiente" onclick="guardarNombre()">       
             </div>
         </a>       
             
