--- a/register-1.html
+++ b/register-1.html
@@ -99,12 +99,12 @@
         <p>Ingrese su apellido</p>
         <br>
         <div id="texto">
-            <input type="text" id="Apellido" placeholder="Apellido">
+            <input type="text" id="apellido" placeholder="Apellido">
         </div>
         <br>
         <a href="register-2.html">
         <div>         
-        <input type="submit" name="siguiente" id="siguiente" value="siguiente">       
+        <input type="submit" name="siguiente" id="siguiente" value="siguiente" onclick="guardarApellido()">       
         </div>
         </a>       
         
