--- a/register-2.html
+++ b/register-2.html
@@ -104,7 +104,7 @@
         <br>
         <a href="register-3.html">
         <div>         
-        <input type="submit" name="siguiente" id="siguiente" value="siguiente">       
+        <input type="submit" name="siguiente" id="siguiente" value="siguiente" onclick="guardarDNI()">       
         </div>
         </a>
         
