--- a/register-3.html
+++ b/register-3.html
@@ -99,12 +99,12 @@
         <p>Ingrese su nombre de Usuario</p>
         <br>
         <div id="texto">
-            <input type="text" id="nameUser" placeholder="Nombre de Usuario">
+            <input type="text" id="userName" placeholder="Nombre de Usuario">
         </div>
         <br>
         <a href="register-4.html">
         <div>         
-        <input type="submit" name="siguiente" id="siguiente" value="siguiente">       
+        <input type="submit" name="siguiente" id="siguiente" value="siguiente" onclick="saveUsername()">       
         </div>
         </a>
         
