--- a/register-6.html
+++ b/register-6.html
@@ -100,7 +100,7 @@
 
         <a href="index.html">
             <div>
-                <input type="submit" id="login" value="Login">
+                <input type="submit" id="login" value="Login" onclick="createUser()">
             </div>
         </a>
             
