--- a/register-5.html
+++ b/register-5.html
@@ -104,7 +104,7 @@
         <br>
         <a href="register-6.html">
         <div>         
-        <input type="submit" name="siguiente" id="siguiente" value="siguiente">       
+        <input type="submit" name="siguiente" id="siguiente" value="siguiente" onclick="saveTel()">       
         </div>
         </a>
         
