Correnciones en la funcionalidad de createUser()

--- a/register-6.html
+++ b/register-6.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="estilo/index-cuerpo.css">
    
     <script src="register.js"></script>
+    <script src="firebase.js"></script>
 </head>
 
 		<header>
