--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="estilo/index-cuerpo.css">
    
     <script src="js/index.js"></script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.1.0/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyD-PzpFH77x-f2Q75mumfks5rEbu1KHCHw",
+          authDomain: "ironapp-57d41.firebaseapp.com",
+          projectId: "ironapp-57d41",
+          storageBucket: "ironapp-57d41.appspot.com",
+          messagingSenderId: "501257652467",
+          appId: "1:501257652467:web:09d6e70f4433e058bb0f86",
+          measurementId: "G-MHET4KQDMF"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
+      <script src="/__/firebase/8.10.0/firebase-database.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/9.0.1/firebase-firestore.js"></script>
+
 </head>
 
 		<header>
