--- a/acciones/seleccion/Roscado/Roscado-ConFresa.html
+++ b/acciones/seleccion/Roscado/Roscado-ConFresa.html
@@ -426,7 +426,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaVC('CalcularVC')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Vc">
                                     <div class="mas-menos-text2" id="mas-menos-text2">+</div>
                                 </div>
                             </div>
@@ -484,7 +484,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaVF('CalcularVF')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Vf">
                                     <div class="mas-menos-text3" id="mas-menos-text3">+</div>
                                 </div>
                             </div>
@@ -547,7 +547,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaFZ('CalcularFZ')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Fz">
                                     <div class="mas-menos-text4" id="mas-menos-text4">+</div>
                                 </div>
                             </div>
