--- a/acciones/seleccion/Roscado/Roscado-MachoDeCorte.html
+++ b/acciones/seleccion/Roscado/Roscado-MachoDeCorte.html
@@ -482,7 +482,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaVC('CalcularVC')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Vc">
                                     <div class="mas-menos-text2" id="mas-menos-text2">+</div>
                                 </div>
                             </div>
@@ -535,12 +535,12 @@
                                 <img src="../../../img/imagenes/Calculadora.png" class="boton-img">
                             </div>
                             <div class="contenido-text">
-                                <div class="text-calculadora">Calcular Kc</div>
+                                <div class="text-calculadora">Calcular K<sub>c</sub></div>
                             </div>
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaVF('CalcularVF')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Vf">
                                     <div class="mas-menos-text3" id="mas-menos-text3">+</div>
                                 </div>
                             </div>
@@ -609,7 +609,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaFZ('CalcularFZ')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Fz">
                                     <div class="mas-menos-text4" id="mas-menos-text4">+</div>
                                 </div>
                             </div>
@@ -682,7 +682,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaQ('CalcularQ')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Q">
                                     <div class="mas-menos-text4" id="mas-menos-text5">+</div>
                                 </div>
                             </div>
