--- a/acciones/seleccion/Fresado/Fresado-Planeado.html
+++ b/acciones/seleccion/Fresado/Fresado-Planeado.html
@@ -482,7 +482,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaVC('CalcularVC')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Vc">
                                     <div class="mas-menos-text2" id="mas-menos-text2">+</div>
                                 </div>
                             </div>
@@ -540,7 +540,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaVF('CalcularVF')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Vf">
                                     <div class="mas-menos-text3" id="mas-menos-text3">+</div>
                                 </div>
                             </div>
@@ -603,7 +603,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaFZ('CalcularFZ')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Fz">
                                     <div class="mas-menos-text4" id="mas-menos-text4">+</div>
                                 </div>
                             </div>
@@ -666,7 +666,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaQ('CalcularQ')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Q">
                                     <div class="mas-menos-text5" id="mas-menos-text5">+</div>
                                 </div>
                             </div>
@@ -729,7 +729,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaB('CalcularB')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-B">
                                     <div class="mas-menos-text6" id="mas-menos-text6">+</div>
                                 </div>
                             </div>
@@ -792,7 +792,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaH('CalcularH')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-QsC">
                                     <div class="mas-menos-text6" id="mas-menos-text7">+</div>
                                 </div>
                             </div>
@@ -853,7 +853,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaFc('CalcularFc')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-QsNC">
                                     <div class="mas-menos-text6" id="mas-menos-text8">+</div>
                                 </div>
                             </div>
@@ -913,7 +913,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaPmot('CalcularPmot')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-hm">
                                     <div class="mas-menos-text6" id="mas-menos-text9">+</div>
                                 </div>
                             </div>
