--- a/acciones/seleccion/Taladrado/Taladrado-Mandrinado.html
+++ b/acciones/seleccion/Taladrado/Taladrado-Mandrinado.html
@@ -489,7 +489,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaVC('CalcularVC')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Vc">
                                     <div class="mas-menos-text2" id="mas-menos-text2">+</div>
                                 </div>
                             </div>
@@ -547,7 +547,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaVF('CalcularVF')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Vf">
                                     <div class="mas-menos-text3" id="mas-menos-text3">+</div>
                                 </div>
                             </div>
@@ -607,7 +607,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaFZ('CalcularFZ')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Fz">
                                     <div class="mas-menos-text4" id="mas-menos-text4">+</div>
                                 </div>
                             </div>
@@ -667,7 +667,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaQ('CalcularQ')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-Q">
                                     <div class="mas-menos-text5" id="mas-menos-text5">+</div>
                                 </div>
                             </div>
@@ -730,7 +730,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaB('CalcularB')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-B">
                                     <div class="mas-menos-text6" id="mas-menos-text6">+</div>
                                 </div>
                             </div>
@@ -793,7 +793,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaH('CalcularH')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-QsC">
                                     <div class="mas-menos-text6" id="mas-menos-text7">+</div>
                                 </div>
                             </div>
@@ -857,7 +857,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaFc('CalcularFc')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-QsNC">
                                     <div class="mas-menos-text6" id="mas-menos-text8">+</div>
                                 </div>
                             </div>
@@ -920,7 +920,7 @@
                         </div>
                         <div class="contenido2"  onClick="muestra_ocultaPmot('CalcularPmot')">
                             <div class="contenido-mas-menos">
-                                <div class="mas-menos">
+                                <div class="mas-menos-hm">
                                     <div class="mas-menos-text6" id="mas-menos-text9">+</div>
                                 </div>
                             </div>
