Se modifico el menu  de tabla resultados
Se modifico el movimiento de la tabla resultados en el cual se quedaba en movimiento continuo hasta cierto punto y no completaba el movimiento continuo.

--- a/acciones/seleccion/Fresado/Fresado-Encuadrado.html
+++ b/acciones/seleccion/Fresado/Fresado-Encuadrado.html
@@ -141,7 +141,7 @@
             <div class="w3-overlay1" onclick="TablaResultados_close()" style="cursor:pointer" id="TablaResOver">
             </div>
             
-            <div class="w3-TablaRes w3-bar-block w3-animate-bottom" style="display:none;z-index:5" id="TablaRes">
+            <div class="w3-TablaRes w3-bar-block w3-animate-tableRes" style="display:none;z-index:5" id="TablaRes">
             	<div class="calc-cerrar" onClick="TablaResultados_close()"><a>CERRAR</a></div>
 					<div class="scrollTablaRes">
             			<table class="tablaResultados" width="100%" cellspacing="0" border="1px solid">
