Crear Usuario funcionando OK

--- a/index.html
+++ b/index.html
@@ -98,16 +98,18 @@
     	
         <div class="cuerpo">
             <br>
+            <form class="formulario" action="login.php" method="post">
         	<label id="labelLogin">Usuario</label>
             <br>
             <input type="text" name="usuario" id="usuario" placeholder="Ingrese aqui su usuario">
             <br>
             <label id="labelLogin">Contraseña</label>  
             <br>
-            <input type="password" name="contraseña" id="contraseña" placeholder="Ingrese aqui su contraseña">
+            <input type="password" name="contraseña" id="password" placeholder="Ingrese aqui su contraseña">
             <br>
             <br>
             <input type="submit" name="ingresar" id="ingresar" value="Ingresar">
+            </form>
             <br>
             <br>
             <a href="register0.html">
