--- a/register0.html
+++ b/register0.html
@@ -95,7 +95,7 @@
     	
         <div class="cuerpo">
         
-        <form class="formulario" action="db.php" method="post">
+        <form class="formulario" action="insert.php" method="post">
         <br>
         <p>Ingrese sus datos</p>
         <input type="text" name="nombre" placeholder="Nombre" required>
