actualización de acciones
se quito todos los link que no van a ningún lado, se modifico las imágenes principales de selección de material e inserto y tabla

--- a/acciones/seleccion/Taladrado.html
+++ b/acciones/seleccion/Taladrado.html
@@ -77,11 +77,11 @@
                                         
             
         	</div> 
-            <a href="index.html">                   
+            <a>                   
             	<img id="frases" src="../../logo/Nombre-IronApp.png"></img>
             </a>
-            <a href="index.html">
-                <img id="casa" src="../../img/imagenes/casa1.png"></img>
+            <a  href="../menu.html">
+                <img id="casa" src="../../img/imagenes/volver1.png"></img>
             </a>    
 		</header>
 		
